# hebbrix-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  quick_setup.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
hebbrix_mcp/: __init__.py  server.py
hooks/: hooks.json
scripts/: session-init.sh
tests/: test_server.py
